# Team4Drone2025

./: .gitignore  drone_test.py  drone_test_analysis.txt  main.py  movement.py  networking.py  pyproject.toml
src/fbl2024/: __init__.py  drone_linetrace.py  drone_qr.py  drone_test.py  main.py  movement.py
src/fbl2024/QR/: main.py  movement.py
src/fbl2024/linetrace/: linetrace.py  main.py  movement.py  networking.py
